feat(notification): add email and logging observers for notification handling

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -72,6 +72,9 @@ application:
     frontend: http://localhost:3000
     backend: http://localhost:8080
     google-auth: ${application.url.frontend}/login/google
+  notifications:
+    email:
+      enabled: true
 logging:
   level:
     root: INFO
