--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,6 +13,7 @@ spring:
       enabled: true
       host: localhost
       port: 6379
+      default-ttl: 3600
   jpa:
     properties:
       hibernate:
