--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -32,7 +32,21 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  minio:
+    image: quay.io/minio/minio
+    container_name: minio
+    ports:
+      - "9000:9000"   # API
+      - "9001:9001"   # Web UI
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: admin123456
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
+    restart: always
 
 volumes:
   postgres_data:
   redis_data:
+  minio_data:
