--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,13 @@
             <artifactId>commons-beanutils</artifactId>
             <version>1.10.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.18.0</version>
+        </dependency>
     </dependencies>
 
     <build>
