--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,9 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
-            <groupId>com.github.VinaAcademy</groupId>
+            <groupId>vn.vinaacademy</groupId>
             <artifactId>common-library</artifactId>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
